# incremental_solver

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/IncrementalSolver/Common/: Types.h
include/IncrementalSolver/Conversion/: ConvertToExpressionGraph.h
include/IncrementalSolver/Dialect/: CMakeLists.txt  ModelFormulationDialect.h  ModelFormulationDialect.td  ModelFormulationOps.h  ModelFormulationOps.td
include/IncrementalSolver/ExpressionGraph/: ExpressionGraph.h  Expressions.h  interface.h
include/IncrementalSolver/ModelBuilder/: ModelFormulationBuilder.h
lib/: CMakeLists.txt
lib/Conversion/: CMakeLists.txt  ConvertToExpressionGraph.cpp  Operations.def
lib/Dialect/: CMakeLists.txt  ModelFormulationDialect.cpp  ModelFormulationOps.cpp
lib/ExpressionGraph/: CMakeLists.txt  ExpressionGraph.cpp
lib/ModelBuilder/: CMakeLists.txt  ModelFormulationBuilder.cpp
python/: CMakeLists.txt  pyproject.toml
python/IncrementalSolver/bindings/: CMakeLists.txt  ModelBuilderWrapper.cpp  incremental_solver.cpp
python/incremental_solver/: interface.py
python/incremental_solver/bindings/: CMakeLists.txt  ModelBuilderWrapper.cpp  ModelBuilderWrapper.h  incremental_solver.cpp  variables_interface.cpp
python/test/: test_interface.py
unittest/: CMakeLists.txt
unittest/Conversion/: CMakeLists.txt  ConversionTest.cpp
unittest/ExpressionGraph/: CMakeLists.txt  ExpressionGraphTest.cpp
